# Project-tests-v2

./: .gitignore  .npmrc  AGENTS.md  Makefile  README.md  TODO.md  docker-compose.test.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_empty.py  0001_initial_schema.py  0002_workout_score_type_and_capacity_weights.py
backend/src/application/dtos/: __init__.py  admin.py  athlete.py  auth.py  base.py  coach.py  common.py  public.py  ranking.py
backend/src/application/services/: movement_impact_transformer.py  runtime_service.py
backend/src/domain/attempts/: entities.py  ports.py  value_objects.py
backend/src/domain/orgs/: entities.py  ports.py
backend/src/domain/progress/: entities.py  ports.py
backend/src/domain/ranking/: entities.py  ports.py
backend/src/domain/shared/: errors.py  ids.py
backend/src/domain/users/: entities.py  ports.py  value_objects.py
backend/src/domain/workouts/: entities.py  ports.py  value_objects.py
backend/src/infrastructure/config/: settings.py
backend/src/infrastructure/db/: base.py  seed.py  session.py
backend/src/infrastructure/logging/: logging.py
backend/tests/: conftest.py  test_api_flows.py  test_domain_invariants.py  test_health.py  test_seed_demo_coherence.py
backend/tests/integration/: conftest.py  test_api_smoke_flow.py  test_db_migrations.py
backend/tests/unit/: test_movement_impact_transformer.py  test_settings.py
docker/: Dockerfile.backend
(+159 files in other folders)
